# jq-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-27-ci-release-readme.md  2026-06-27-missing-features.md
docs/superpowers/specs/: 2026-06-27-ci-release-readme-design.md  2026-06-27-missing-features-design.md
src/: interpreter.rs  main.rs  parser.rs  value.rs
