[package]
name = "jq-rs"
version = "0.1.0"
edition = "2021"
authors = ["jq-rs contributors"]
license = "MIT"
description = "A Rust reimplementation of jq — the JSON processor"
repository = "https://github.com/hermes98761234/jq-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
regex = "1"
